--- a/s.plist
+++ b/s.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>http://c.3412new.info/resigned-9b18a564a70bef4f4cab6e6000acd728.ipa</string>
+                    <string>https://t.3412new.org/s.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
@@ -23,7 +23,7 @@
                 <key>kind</key>
                 <string>software</string>
                 <key>title</key>
-                <string>resigned-9b18a564a70bef4f4cab6e6000acd728.ipa</string>
+                <string>s.ipa</string>
             </dict>
         </dict>
     </array>
